Added Favorites section. Details were also added to Favorites section

--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
         <h3> Name: Angelo John C. Cruz </h3>
         <h3> Nickname: Jolo </h3>
         <h3> *insert photo* </h3>
-        
+
         <body>
 
+            <h4> Favorites </h4>
+
+            <ul>
+                <li> Favorite CMSC subject so far: CMSC 22</li>
+                <li> Favorite GE so far and why: KAS 1, as it made me see and appreciate history in a different way.</li>
+                <li> Favorite PL and why: </li>
+                <li> Favorite Food: Fried chicken </li>
+            </ul>
         </body>
     </head>
 
