Added hobbies and dream section. Details were also added to said section.

--- a/index.html
+++ b/index.html
@@ -9,10 +9,17 @@
             <h4> Favorites </h4>
 
             <ul>
-                <li> Favorite CMSC subject so far: CMSC 22</li>
-                <li> Favorite GE so far and why: KAS 1, as it made me see and appreciate history in a different way.</li>
-                <li> Favorite PL and why: </li>
-                <li> Favorite Food: Fried chicken </li>
+                <li>Favorite CMSC subject so far: CMSC 22</li>
+                <li>Favorite GE so far and why: KAS 1, as it made me see and appreciate history in a different way.</li>
+                <li>Favorite PL and why: </li>
+                <li>Favorite Food: Fried chicken </li>
+            </ul>
+
+            <h4> Hobbies and Dream </h4>
+
+            <ul>
+                <li>Hobbies: programming, sleeping, playing games, doing anything music related (playing, producing, mixing/mastering)</li>
+                <li>Childhood dream: To grow up into a person that I am happy with</li>
             </ul>
         </body>
     </head>
