Updated wording in 'Favorites' and 'Hobbies and Dream' sections.

--- a/index.html
+++ b/index.html
@@ -10,17 +10,18 @@
 
             <ul>
                 <li>Favorite CMSC subject so far: CMSC 22</li>
-                <li>Favorite GE so far and why: KAS 1, as it made me see and appreciate history in a different way.</li>
-                <li>Favorite PL and why: </li>
-                <li>Favorite Food: Fried chicken </li>
+                <li>Favorite GE so far and why: My favorite GE is KAS 1 as it made me see and appreciate history in a different way.</li>
+                <li>Favorite PL and why: My favorite programming language is C or Python. C because it is the language that I have used the most, and Python because it is easy to learn and code in.</li>
+                <li>Favorite Food: Fried chicken</li>
             </ul>
 
             <h4> Hobbies and Dream </h4>
 
             <ul>
-                <li>Hobbies: programming, sleeping, playing games, doing anything music related (playing, producing, mixing/mastering)</li>
-                <li>Childhood dream: To grow up into a person that I am happy with</li>
+                <li>Hobbies: My hobbies include programming, sleeping, playing games, doing anything music related (playing, producing, mixing/mastering)</li>
+                <li>Childhood dream: My childhood dream is to grow up into a person that I am happy with.</li>
             </ul>
+
         </body>
     </head>
 
