--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
             <h4> Favorites </h4>
 
             <ul>
-                <li> Favorite CMSC subject so far: CMSC 22</li>
-                <li> Favorite GE so far and why: KAS 1, as it made me see and appreciate history in a different way.</li>
-                <li> Favorite PL and why: </li>
-                <li> Favorite Food: Fried chicken </li>
+                <li>Favorite CMSC subject so far: CMSC 22</li>
+                <li>Favorite GE so far and why: My favorite GE is KAS 1 as it made me see and appreciate history in a different way.</li>
+                <li>Favorite PL and why: My favorite programming language is C or Python. C because it is the language that I have used the most, and Python because it is easy to learn and code in.</li>
+                <li>Favorite Food: Fried chicken</li>
             </ul>
         </body>
     </head>
