--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
 
-        <img src="https://imgur.com/BGZI20w" style="width:200px;height:200px;">
+        <img src="https://imgur.com/a/GpoM4eo" style="width:200px;height:200px;">
         <h3> Name: Angelo John C. Cruz </h3>
         <h3> Nickname: Jolo </h3>
     
