Updated style.css. Fixed linking of css file with html file.

--- a/index.html
+++ b/index.html
@@ -1,21 +1,20 @@
 <html>
 
     <head>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
         <img src="https://imgur.com/a/GpoM4eo" style="width:200px;height:200px;">
         <h3> Name: Angelo John C. Cruz </h3>
         <h3> Nickname: Jolo </h3>
-
-        <h4> Favorites </h4>
+        <h3> Favorites </h3>
 
         <ul>
-            <li>Favorite CMSC subject so far: CMSC 22</li>
-            <li>Favorite GE so far and why: My favorite GE is KAS 1 as it made me see and appreciate history in a different way.</li>
-            <li>Favorite PL and why: My favorite programming language is C or Python. C because it is the language that I have used the most, and Python because it is easy to learn and code in.</li>
-            <li>Favorite Food: Fried chicken</li>
+            <li><u>Favorite CMSC subject so far:</u> CMSC 22</li>
+            <li><u>Favorite GE so far and why:</u> My favorite GE is KAS 1 as it made me see and appreciate history in a different way.</li>
+            <li><u>Favorite PL and why:</u> My favorite programming language is C or Python. C because it is the language that I have used the most, and Python because it is easy to learn and code in.</li>
+            <li><u>Favorite food:</u> Fried chicken</li>
         </ul>
     </body>
 
