--- a/index.html
+++ b/index.html
@@ -5,16 +5,18 @@
     </head>
 
     <body>
-        <img src="https://imgur.com/a/GpoM4eo" style="width:200px;height:200px;">
+        <br>
+        <img src="https://i.imgur.com/BGZI20w.pngo">
+        <br><br>
         <h3> Name: Angelo John C. Cruz </h3>
         <h3> Nickname: Jolo </h3>
         <h3> Favorites </h3>
 
         <ul>
-            <li><u>Favorite CMSC subject so far:</u> CMSC 22</li>
-            <li><u>Favorite GE so far and why:</u> My favorite GE is KAS 1 as it made me see and appreciate history in a different way.</li>
-            <li><u>Favorite PL and why:</u> My favorite programming language is C or Python. C because it is the language that I have used the most, and Python because it is easy to learn and code in.</li>
-            <li><u>Favorite food:</u> Fried chicken</li>
+            <li><u>[CMSC Subject]</u> CMSC 22</li>
+            <li><u>[GE]</u> My favorite GE is KAS 1 as it made me see and appreciate history in a different way.</li>
+            <li><u>[PL]</u> My favorite programming language is C or Python. C because it is the language that I have used the most, and Python because it is easy to learn and use.</li>
+            <li><u>[Food]</u> My favorite food is fried chicken.</li>
         </ul>
     </body>
 
