Updated page styling.

--- a/index.html
+++ b/index.html
@@ -6,17 +6,21 @@
 
     <body>
         <br>
-        <img src="https://i.imgur.com/BGZI20w.pngo">
-        <br><br>
-        <h3> Name: Angelo John C. Cruz </h3>
-        <h3> Nickname: Jolo </h3>
-        <h3> Favorites </h3>
 
+        <h1> Angelo John C. Cruz (Jolo) </h1>
+
+        <br>
+
+        <img src="https://i.imgur.com/BGZI20w.pngo">
+
+        <br><br>
+
+        <h2> Favorites </h2>
         <ul>
-            <li><u>[CMSC Subject]</u> CMSC 22</li>
-            <li><u>[GE]</u> My favorite GE is KAS 1 as it made me see and appreciate history in a different way.</li>
-            <li><u>[PL]</u> My favorite programming language is C or Python. C because it is the language that I have used the most, and Python because it is easy to learn and use.</li>
-            <li><u>[Food]</u> My favorite food is fried chicken.</li>
+            <li>My favorite <u>[CMSC Subject]</u> is CMSC 22.</li>
+            <li>My favorite <u>[GE]</u> is KAS 1 because it made me see and appreciate history in a different way.</li>
+            <li>My favorite <u>[PL]</u> is C or Python. C because it is the language that I have used the most, and Python because it is easy to learn and use.</li>
+            <li>My favorite <u>[Food]</u> is fried chicken.</li>
         </ul>
     </body>
 
